added mobile author info to posts

--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -112,7 +112,7 @@
 			font-family: 'ProductSans-Bold', 'TTNorms-Medium';
 			@media(max-width: 600px) {
 				font-size: 1.4em;
-				margin: 0 0 10px;
+				margin: 5px 0 10px;
 				font-weight: 500;
 				line-height: 1.2em;
 			}
@@ -305,9 +305,6 @@
 
 			&.author,
 			&.author-mobile {
-				img {
-					display: none;
-				}
 
 				i {
 					color: @meta-color;
@@ -443,6 +440,7 @@
 		height: 30px;
 		display: inline-block;
 		margin-right: 10px;
+		border-radius: 3px;
 		@media(max-width: 600px) {
 			margin-right: 15px;
 			width: 45px;
