--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -182,7 +182,7 @@
 			text-align: center;
 			font-weight: 500!important;
 			border: none;
-			padding: 0 12px 9px;
+			padding: 0 12px;
 		}
 	}
 
