--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -223,8 +223,8 @@
       td {
         display: block;
         min-height: 1.25em;
-        margin: 0 10px!important !important;
-        padding: 10px 15px !important;
+        margin: 0 10px !important;
+        padding: 10px 0 !important;
         border-spacing: 0;
         border-collapse: collapse;
         overflow-wrap: break-word;
