--- a/post.hbs
+++ b/post.hbs
@@ -74,9 +74,9 @@
 						{{> nextprev}}
 					</article>
 					{{> about-author}}
-					{{#author include="count.posts"}}
-						 {{> author-card}}
-					{{/author}}
+					{{#foreach authors include="count.posts"}}
+						{{> author-card}}
+					{{/foreach}}
 					{{> relatedposts}}
 					{{> widget-newsletter}}
 				</div>
