--- a/src/less/author/author.less
+++ b/src/less/author/author.less
@@ -29,6 +29,7 @@
 
 			@media(max-width: 600px) {
 				  max-width: 90%;
+				margin: 10px auto 0;
 			}
 		}
 	}
@@ -49,9 +50,11 @@
 			display: none !important;
 		}
 
+		.website,
 		.author-website {
 			content {
-				padding: 0;
+				overflow: hidden;
+    		padding: 0;
 			}
 		}
 
@@ -69,6 +72,16 @@
 
 		#medium {
 			background: white;
+			padding: 20px 30px;
+
+			.medium-widget-article__grid {
+			    border-bottom: 1px solid #e5e5e5;
+			    padding-bottom: 20px;
+
+					&:last-of-type {
+						border-bottom: 0;
+					}
+			}
 
 			.title {
 				margin: 0 0 0 -9px;
@@ -79,8 +92,18 @@
 				padding: 15px 5px;
 			}
 
+			.medium-widget-article__description {
+				display: none;
+			}
+			.medium-widget-article__title {
+				    font-family: 'ProductSans-Regular';
+						color: @text-color-heading;
+						font-size: 1.2em;
+						line-height: 1.2;
+			}
+
 			.medium-widget-article__image img {
-				width: 80px;
+				width: 100px;
 			}
 		}
 
