--- a/src/less/posts/about-author.less
+++ b/src/less/posts/about-author.less
@@ -20,10 +20,14 @@
     margin-right: 30px;
     border-radius: 2px;
     border: 1px solid rgba(40, 98, 190, 0.5);
+    @media(max-width: 800px) {
+      margin-right: 20px;
+    }
     @media(max-width: 600px) {
       width: 80px;
       height: 80px;
       margin: 0 15px 15px 0;
+
     }
 
     img {
@@ -123,6 +127,10 @@
       margin-right: 40px;
       margin-bottom: 0;
       font-weight: 100;
+
+      @media(max-width: 800px) {
+        margin-right: 30px;
+      }
 
       .copy {
         opacity: .8;
