--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -7,7 +7,7 @@ article {
     width: 100%;
 
     .nextprev {
-      display: flex;
+      display: none;
       flex-direction: row;
       flex-wrap: nowrap;
 
