added mobile author info to posts

--- a/src/less/posts/nextprev.less
+++ b/src/less/posts/nextprev.less
@@ -5,9 +5,10 @@ article {
     left: 0;
     background: white;
     width: 100%;
+    display: none;
 
     .nextprev {
-      display: none;
+      display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
 
