html code snippet

--- a/src/less/posts/languages/markup.less
+++ b/src/less/posts/languages/markup.less
@@ -6,7 +6,7 @@
 .language-html,
 .language-jinja,
 .language-xml {
-  background: linear-gradient(#383360, #27203a) !important;
+  background: #2a254e !important;
   color: #d0e1f6;
 
   .hljs-tag {
@@ -30,9 +30,9 @@
   .hljs-name {
     color: #89a4ff;
   }
-  background: #272738;
 
   &::before {
     content: "HTML";
+    background: rgba(56, 62, 102, 0.6);
   }
 }
