major speed improvements

--- a/custom-author-archive.hbs
+++ b/custom-author-archive.hbs
@@ -20,8 +20,8 @@
 							{{content}}
 						</div>
 						<div class="author-container">
- 						{{#get "users" limit="all" include="count.posts" order="count.posts desc" }}
- 							{{#foreach users}}
+ 						{{#get "authors" limit="all" include="count.posts" order="count.posts desc" }}
+ 							{{#foreach authors}}
 								{{> author-card}}
  							{{/foreach}}
  						{{/get}}
