--- a/src/less/posts/languages/sql.less
+++ b/src/less/posts/languages/sql.less
@@ -1,5 +1,6 @@
 .language-sql {
   background: #292648;
+  color: #c5c8c6;
   .hljs span::selection,
   .hljs::selection {
     background: #373b41;
@@ -15,7 +16,7 @@
   }
   /*foreground color*/
   .hljs {
-    color: #c5c8c6;
+    color: #c5c8c6 !important;
   }
   /*color: fg_yellow*/
   .hljs-name,
