--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -86,6 +86,10 @@
 		margin: 0 auto 10px;
 		transition: all 0.2s ease-out;
 
+		img {
+			max-width: 100%;
+		}
+
 		@media(max-width: 600px) {
 			 margin: 0 auto;
 		}
