--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -4,7 +4,7 @@
 .language-output,
 .language-bash {
   background: @nord0;
-  color: @nord8;
+  color: white;
   font-weight: normal;
 
   .hljs-title {
@@ -13,7 +13,7 @@
   }
 
   .hljs-name {
-    color: @nord4;
+    color: @nord8;
   }
 
   .hljs-tag {
@@ -102,5 +102,6 @@
   }
   &::before {
     content: "Shell" !important;
+    color: white;
   }
 }
