--- a/src/less/posts/languages/sql.less
+++ b/src/less/posts/languages/sql.less
@@ -1,5 +1,6 @@
-.language-sql {
-  background: #292648;
+.language-sql,
+.sql {
+  background: #262748;
   color: #c5c8c6;
   .hljs span::selection,
   .hljs::selection {
@@ -90,6 +91,6 @@
 
   &::before {
     content: "SQL";
-    background: rgba(49, 59, 101, 0.6);
+    background: rgba(49, 88, 101, 0.6);
   }
 }
