--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -1,10 +1,10 @@
 #seriesposts {
   margin: 0 60px 30px;
-  padding: 40px 20px 10px;
+  padding: 35px 20px 10px;
   display: none;
-  background: #00608014;
   position: relative;
-  border-radius: 3px;
+  border-bottom: 1px solid #bed0da;
+  border-top: 1px solid #bed0da;
   overflow: hidden;
 
   @media(max-width: 800px) {
@@ -20,8 +20,7 @@
     color: #597d87 !important;
     font-family: 'TTNorms-Medium', serif;
     margin-bottom: 15px;
-    background: #dae7eb;
-    padding: 12px 14px;
+    padding: 14px 12px;
     width: -webkit-fill-available;
     width: -moz-fill-available;
     margin-top: 0;
@@ -34,7 +33,7 @@
 
   ol {
     list-style-type: upper-roman !important;
-    margin-top: 10px;
+    margin-top: 0;
     margin-bottom: 10px;
     margin-left: 0;
     padding-left: 20px;
