--- a/author.hbs
+++ b/author.hbs
@@ -1,6 +1,7 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
+{{#author}}
 <section class="content-wrap">
 	<div class="container">
 		<div class="row">
@@ -18,4 +19,5 @@
 		</div>
 	</div>
 </section>
+{{/author}}
 <!-- end sites main content area -->
