--- a/error.hbs
+++ b/error.hbs
@@ -11,7 +11,9 @@ html,body {
 }
 
 header {
-  margin-bottom: 0 !important;
+  box-shadow: 1px 1px 3px rgba(143, 142, 179, 0.4) !important;
+  z-index: 100;
+  position: relative;
 }
 
 .main-footer {
@@ -21,21 +23,12 @@ header {
 .error-message {
   position: relative;
   min-width: 100%;
-  height: 900px;
+  height: 1000px;
   background: url('https://www.reactiongifs.us/wp-content/uploads/2015/04/nothing_to_see_here_naked_gun.gif') no-repeat center center fixed;
   background-size: cover;
   background-color: #000;
-  opacity: 1;
-  filter: alpha(opacity=50);
+  opacity: .8;
   margin: 0;
-
-  * {
-    color: white !important;
-  }
-
-  div {
-
-  }
 }
 
 .content {
@@ -56,6 +49,7 @@ h1 {
   margin-top: 0;
   color: white !important;
   height: 120px;
+  text-shadow: -3px 3px 0 #404767, 0 1px 0 #404767, 1px -1px 0 #404767, -1px -1px 0 #404767;
 }
 
 h2 {
@@ -64,6 +58,7 @@ h2 {
   font-size: 30px;
   width: 90%;
   color: white !important;
+  text-shadow: -2px 2px 0 #404767, 0 1px 0 #404767, 1px -1px 0 #404767, -1px -1px 0 #404767;
 
 }
 
@@ -71,21 +66,26 @@ p {
   text-align: left;
   padding-bottom: 32px;
   color: white !important;
+  text-shadow: -1px 1px 0 #404767;
 }
 
 .error-button {
   display: inline-block;
-  border: 1px solid #aaa;
+  border: 1px solid #fff;
   border-radius: 40px;
   padding: 15px 30px;
   margin-right: 15px;
   margin-bottom: 10px;
   color: white !important;
-  &:hover {
-    color: #e2e2e2 !important;
-    background: rgba(255,255,255,0.10) !important;
-    cursor: pointer;
-  }
+  background: rgba(255, 255, 255, 0.33) !important;
+  transition: all .2s ease-out;
+}
+
+.error-button:hover {
+  color: #e2e2e2 !important;
+  background: rgba(13, 176, 226, .8);
+  border: 1px solid rgba(13, 176, 226, .8);
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 480px) {
