--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -57,7 +57,7 @@ blockquote pre {
       font-weight: 100;
 
       * {
-        text-shadow: -1px 1px 0 black;
+        text-shadow: -1px 1px 0 rgba(0, 0, 0, 0.5);
       }
 
       @media(max-width: 600px) {
