--- a/src/less/posts/languages/markup.less
+++ b/src/less/posts/languages/markup.less
@@ -6,7 +6,7 @@
 .language-html,
 .language-jinja,
 .language-xml {
-  background: #2a254e !important;
+  background: #2f3053 !important;
   color: #d0e1f6;
 
   .hljs-tag {
