--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -1,15 +1,16 @@
-.language-python {
+.language-python,
+.python {
   color: #e4f8fd ;
-  background: #152948 !important;
+  background: #1c2d47 !important;
 
   &::before {
     height: auto;
     content: "Python" !important;
-    background: rgba(58, 78, 120, 0.6);
+    background: rgba(61, 74, 101, 0.6);
   }
 
   .hljs-meta {
-    color: #9eb2c6;
+    color: #d0b6b6;
   }
 
   .hljs-addition,
