--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -16,9 +16,11 @@
 
   h5 {
     padding-bottom: 0;
-    font-size: 1.1em;
+    font-size: 1.2em;
     color: #597d87 !important;
-    font-family: 'TTNorms-Medium', serif;
+    font-family: 'ProductSans-Regular', serif;
+    font-weight: 600;
+    letter-spacing: 1px;
     margin-bottom: 15px;
     padding: 14px 12px;
     width: -webkit-fill-available;
