mobile table style cleanup

--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -16,6 +16,7 @@
 {{/is}}
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-6jHF7Z3XI3fF4XZixAuSu0gGKrXwoX/w3uFPxC56OtjChio7wtTGJWRW53Nhx6Ev" crossorigin="anonymous">
 <script src="{{asset "/js/includes/retina.min.js"}}"></script>
+<script src="https://cdnjs.com/libraries/baguettebox.js"></script>
 <script>
 var lazyLoadInstance = new LazyLoad({
     elements_selector: ".lazy"
