--- a/src/less/posts.less
+++ b/src/less/posts.less
@@ -21,3 +21,6 @@
 @import 'posts/languages/python.less';
 @import 'posts/languages/javascript.less';
 @import 'posts/languages/sql.less';
+
+/* baquette box */
+@import 'posts/box.css';
