--- a/src/less/posts/languages/config.less
+++ b/src/less/posts/languages/config.less
@@ -1,180 +1,182 @@
-.hljs.ini,
-.hljs.vim,
-.hljs.yaml,
-.hljs.css,
-.language-ini,
-.language-vim,
-.language-yaml,
-.language-toml,
-.language-xml,
-.language-css {
-  background: #2E3440;
+.post-content {
+  .hljs.css,
+  .hljs.ini,
+  .hljs.vim,
+  .hljs.yaml,
+  .language-css,
+  .language-ini,
+  .language-toml,
+  .language-vim,
+  .language-xml,
+  .language-yaml {
+    background: #2E3440;
 
-  &::before{
-    @media(max-width: 600px) {
-       font-size: 1.2em !important;
-     }
-  }
+    &::before {
+      @media(max-width: 600px) {
+        font-size: 1.2em !important;
+      }
+    }
 
-  .hljs,
-  .subst {
-    color: #D8DEE9;
-  }
+    .hljs,
+    .subst {
+      color: #D8DEE9;
+    }
 
-  .hljs-selector-tag {
-    color: #81A1C1;
-  }
+    .hljs-selector-tag {
+      color: #81A1C1;
+    }
 
-  .hljs-selector-id {
-    color: #8FBCBB;
-    font-weight: bold;
-  }
+    .hljs-selector-id {
+      color: #8FBCBB;
+      font-weight: bold;
+    }
 
-  .hljs-selector-class {
-    color: #8FBCBB;
-  }
+    .hljs-selector-class {
+      color: #8FBCBB;
+    }
 
-  .hljs-selector-attr {
-    color: #8FBCBB;
-  }
+    .hljs-selector-attr {
+      color: #8FBCBB;
+    }
 
-  .hljs-selector-pseudo {
-    color: #88C0D0;
-  }
+    .hljs-selector-pseudo {
+      color: #88C0D0;
+    }
 
-  .hljs-addition {
-    background-color: rgba(163,190,140,0.5);
-  }
+    .hljs-addition {
+      background-color: rgba(163,190,140,0.5);
+    }
 
-  .hljs-deletion {
-    background-color: rgba(191,97,106,0.5);
-  }
+    .hljs-deletion {
+      background-color: rgba(191,97,106,0.5);
+    }
 
-  .hljs-built_in,
-  .hljs-type {
-    color: #8FBCBB;
-  }
+    .hljs-built_in,
+    .hljs-type {
+      color: #8FBCBB;
+    }
 
-  .hljs-class {
-    color: #8FBCBB;
-  }
+    .hljs-class {
+      color: #8FBCBB;
+    }
 
-  .hljs-function {
-    color: #88C0D0;
-  }
+    .hljs-function {
+      color: #88C0D0;
+    }
 
-  .hljs-function > .hljs-title {
-    color: #88C0D0;
-  }
+    .hljs-function > .hljs-title {
+      color: #88C0D0;
+    }
 
-  .hljs-keyword,
-  .hljs-literal,
-  .hljs-symbol {
-    color: #81A1C1;
-  }
+    .hljs-keyword,
+    .hljs-literal,
+    .hljs-symbol {
+      color: #81A1C1;
+    }
 
-  .hljs-number {
-    color: #B48EAD;
-  }
+    .hljs-number {
+      color: #B48EAD;
+    }
 
-  .hljs-regexp {
-    color: #EBCB8B;
-  }
+    .hljs-regexp {
+      color: #EBCB8B;
+    }
 
-  .hljs-string {
-    color: #A3BE8C;
-    font-weight: 400;
-    font-family: 'Hack';
-  }
+    .hljs-string {
+      color: #A3BE8C;
+      font-weight: 400;
+      font-family: 'Hack';
+    }
 
-  .hljs-title {
-    color: #8FBCBB;
-  }
+    .hljs-title {
+      color: #8FBCBB;
+    }
 
-  .hljs-params {
-    color: #D8DEE9;
-  }
+    .hljs-params {
+      color: #D8DEE9;
+    }
 
-  .hljs-bullet {
-    color: #81A1C1;
-  }
+    .hljs-bullet {
+      color: #81A1C1;
+    }
 
-  .hljs-code {
-    color: #8FBCBB;
-  }
+    .hljs-code {
+      color: #8FBCBB;
+    }
 
-  .hljs-emphasis {
-    font-style: italic;
-  }
+    .hljs-emphasis {
+      font-style: italic;
+    }
 
-  .hljs-formula {
-    color: #8FBCBB;
-  }
+    .hljs-formula {
+      color: #8FBCBB;
+    }
 
-  .hljs-strong {
-    font-weight: bold;
-  }
+    .hljs-strong {
+      font-weight: bold;
+    }
 
-  .hljs-link:hover {
-    text-decoration: underline;
-  }
+    .hljs-link:hover {
+      text-decoration: underline;
+    }
 
-  .hljs-quote {
-    color: #4C566A;
-  }
+    .hljs-quote {
+      color: #4C566A;
+    }
 
-  .hljs-comment {
-    color: #4C566A;
-  }
+    .hljs-comment {
+      color: #4C566A;
+    }
 
-  .hljs-doctag {
-    color: #8FBCBB;
-  }
+    .hljs-doctag {
+      color: #8FBCBB;
+    }
 
-  .hljs-meta,
-  .hljs-meta-keyword {
-    color: #5E81AC;
-  }
+    .hljs-meta,
+    .hljs-meta-keyword {
+      color: #5E81AC;
+    }
 
-  .hljs-meta-string {
-    color: #A3BE8C;
-    font-weight: 400;
-    font-family: 'Hack';
-  }
+    .hljs-meta-string {
+      color: #A3BE8C;
+      font-weight: 400;
+      font-family: 'Hack';
+    }
 
-  .hljs-attr {
-    color: #8FBCBB;
-  }
+    .hljs-attr {
+      color: #8FBCBB;
+    }
 
-  .hljs-attribute {
-    color: #D8DEE9;
-  }
+    .hljs-attribute {
+      color: #D8DEE9;
+    }
 
-  .hljs-builtin-name {
-    color: #81A1C1;
-  }
+    .hljs-builtin-name {
+      color: #81A1C1;
+    }
 
-  .hljs-name {
-    color: #81A1C1;
-  }
+    .hljs-name {
+      color: #81A1C1;
+    }
 
-  .hljs-section {
-    color: #88C0D0;
-  }
+    .hljs-section {
+      color: #88C0D0;
+    }
 
-  .hljs-tag {
-    color: #81A1C1;
-  }
+    .hljs-tag {
+      color: #81A1C1;
+    }
 
-  .hljs-variable {
-    color: #D8DEE9;
-  }
+    .hljs-variable {
+      color: #D8DEE9;
+    }
 
-  .hljs-template-variable {
-    color: #D8DEE9;
-  }
+    .hljs-template-variable {
+      color: #D8DEE9;
+    }
 
-  .hljs-template-tag {
-    color: #5E81AC;
+    .hljs-template-tag {
+      color: #5E81AC;
+    }
   }
 }
