--- a/src/less/posts/languages/javascript.less
+++ b/src/less/posts/languages/javascript.less
@@ -1,103 +1,106 @@
-.hljs.javascript,
-.hljs.language-javascript {
-  background: linear-gradient(#203f50, #0b3c66) !important;
-  color: #5fc793;
+.post-content {
+  .hljs.javascript,
+  .hljs.language-javascript {
+    background: linear-gradient(#203f50, #0b3c66) !important;
+    color: #5fc793;
 
-  &::-moz-selection {
-    text-shadow: none;
-    background: #435643;
-  }
-  .hljs-inserted {
-    border-bottom: 1px dotted #f0fff0;
-    text-decoration: none;
-  }
+    &::-moz-selection {
+      text-shadow: none;
+      background: #435643;
+    }
 
-  .hljs-italic {
-    font-style: italic;
-  }
+    .hljs-inserted {
+      border-bottom: 1px dotted #f0fff0;
+      text-decoration: none;
+    }
 
-  .hljs-bold,
-  .hljs-important {
-    font-weight: bold;
-  }
+    .hljs-italic {
+      font-style: italic;
+    }
 
-  .hljs-important {
-    color: #b3d6b3;
-  }
+    .hljs-bold,
+    .hljs-important {
+      font-weight: bold;
+    }
 
-  .hljs-entity {
-    cursor: help;
-  }
+    .hljs-important {
+      color: #b3d6b3;
+    }
 
-  .hljs-highlight {
-    outline: 0.4em solid #5c705c;
-    outline-offset: 0.4em;
-  }
+    .hljs-entity {
+      cursor: help;
+    }
 
-  .hljs-cdata,
-  .hljs-doctype,
-  .hljs-prolog {
-    color: #535f53;
-  }
+    .hljs-highlight {
+      outline: 0.4em solid #5c705c;
+      outline-offset: 0.4em;
+    }
 
-  .hljs-comment {
-    color: #7f8ba7;
-  }
+    .hljs-cdata,
+    .hljs-doctype,
+    .hljs-prolog {
+      color: #535f53;
+    }
 
-  .hljs-built_in {
-    font-weight: 700;
-    color: #79ddfb;
-  }
+    .hljs-comment {
+      color: #7f8ba7;
+    }
 
-  .hljs-punctuation {
-    color: #535f53;
-  }
+    .hljs-built_in {
+      font-weight: 700;
+      color: #79ddfb;
+    }
 
-  .hljs-namespace {
-    opacity: 0.7;
-  }
+    .hljs-punctuation {
+      color: #535f53;
+    }
 
-  .hljs-number,
-  .hljs-operator,
-  .hljs-tag {
-    color: #a2b34d;
-  }
+    .hljs-namespace {
+      opacity: 0.7;
+    }
 
-  .hljs-property {
-    color: #687d68;
-  }
+    .hljs-number,
+    .hljs-operator,
+    .hljs-tag {
+      color: #a2b34d;
+    }
 
-  .hljs-atrule-id,
-  .hljs-selector,
-  .hljs-tag-id {
-    color: #f0fff0;
-  }
+    .hljs-property {
+      color: #687d68;
+    }
 
-  .hljs-attr-name {
-    color: #b3d6b3;
-  }
+    .hljs-atrule-id,
+    .hljs-selector,
+    .hljs-tag-id {
+      color: #f0fff0;
+    }
 
-  .hljs-params,
-  .hljs-function {
-    color: #EEAC18;
-  }
+    .hljs-attr-name {
+      color: #b3d6b3;
+    }
 
-  .hljs-keyword {
-    color: #FD92F0;
-  }
+    .hljs-function,
+    .hljs-params {
+      color: #EEAC18;
+    }
 
-  .hljs-string {
-    color: #F4E39D;
-    font-weight: 400;
-    font-family: 'Hack';
-  }
+    .hljs-keyword {
+      color: #FD92F0;
+    }
 
-  .hljs-attr {
-    color: #a39fff;
-  }
+    .hljs-string {
+      color: #F4E39D;
+      font-weight: 400;
+      font-family: 'Hack';
+    }
 
-  &::before {
-    content: "Javascript";
-    color: white;
+    .hljs-attr {
+      color: #a39fff;
+    }
+
+    &::before {
+      content: "Javascript";
+      color: white;
+    }
   }
 }
