--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -1,88 +1,90 @@
-.json,
-.language-json {
-  line-height: 1.4 !important;
+.post-content {
+  .json,
+  .language-json {
+    line-height: 1.4 !important;
 
-  .hljs-attr {
-    color: #e471a6 !important;
-    font-weight: 700;
-    font-family: 'Hack';
-  }
+    .hljs-attr {
+      color: #e471a6 !important;
+      font-weight: 700;
+      font-family: 'Hack';
+    }
 
-  .hljs-string {
-    color: #c39dea;
-  }
+    .hljs-string {
+      color: #c39dea;
+    }
 
-  .hljs-comment,
-  .hljs-quote {
-    color: #5c6370;
-    font-style: italic;
-  }
+    .hljs-comment,
+    .hljs-quote {
+      color: #5c6370;
+      font-style: italic;
+    }
 
-  .hljs-doctag,
-  .hljs-formula,
-  .hljs-keyword {
-    color: #c678dd;
-  }
+    .hljs-doctag,
+    .hljs-formula,
+    .hljs-keyword {
+      color: #c678dd;
+    }
 
-  .hljs-deletion,
-  .hljs-name,
-  .hljs-section,
-  .hljs-selector-tag,
-  .hljs-subst {
-    color: #e06c75;
-  }
+    .hljs-deletion,
+    .hljs-name,
+    .hljs-section,
+    .hljs-selector-tag,
+    .hljs-subst {
+      color: #e06c75;
+    }
 
-  .hljs-literal {
-    color: #56b6c2;
-  }
+    .hljs-literal {
+      color: #56b6c2;
+    }
 
-  .hljs-addition,
-  .hljs-attribute,
-  .hljs-meta-string,
-  .hljs-regexp,
-  .hljs-string {
-    color: #c39dea !important;
-  }
+    .hljs-addition,
+    .hljs-attribute,
+    .hljs-meta-string,
+    .hljs-regexp,
+    .hljs-string {
+      color: #c39dea !important;
+    }
 
-  .hljs-built_in,
-  .hljs-class,
-  .hljs-title {
-    color: #e6c07b;
-  }
+    .hljs-built_in,
+    .hljs-class,
+    .hljs-title {
+      color: #e6c07b;
+    }
 
-  .hljs-attr,
-  .hljs-number,
-  .hljs-selector-attr,
-  .hljs-selector-class,
-  .hljs-selector-pseudo,
-  .hljs-template-variable,
-  .hljs-type,
-  .hljs-variable {
-    color: #d19a66;
-  }
+    .hljs-attr,
+    .hljs-number,
+    .hljs-selector-attr,
+    .hljs-selector-class,
+    .hljs-selector-pseudo,
+    .hljs-template-variable,
+    .hljs-type,
+    .hljs-variable {
+      color: #d19a66;
+    }
 
-  .hljs-bullet,
-  .hljs-link,
-  .hljs-meta,
-  .hljs-selector-id,
-  .hljs-symbol,
-  .hljs-title {
-    color: #61aeee;
-  }
+    .hljs-bullet,
+    .hljs-link,
+    .hljs-meta,
+    .hljs-selector-id,
+    .hljs-symbol,
+    .hljs-title {
+      color: #61aeee;
+    }
 
-  .hljs-emphasis {
-    font-style: italic;
-  }
+    .hljs-emphasis {
+      font-style: italic;
+    }
 
-  .hljs-strong {
-    font-weight: bold;
-  }
+    .hljs-strong {
+      font-weight: bold;
+    }
 
-  .hljs-link {
-    text-decoration: underline;
-  }
+    .hljs-link {
+      text-decoration: underline;
+    }
 
-  &::before {
-    content: "JSON";
+    &::before {
+      content: "JSON";
+    }
   }
 }
