--- a/src/less/posts/languages/markup.less
+++ b/src/less/posts/languages/markup.less
@@ -1,38 +1,41 @@
-.handlebars,
-.hljs.html,
-.language-css,
-.language-endpoint,
-.language-handlebars,
-.language-html,
-.language-jinja,
-.language-xml {
-  background: #2f3053 !important;
-  color: #d0e1f6;
+.post-content {
+  
+  .handlebars,
+  .hljs.html,
+  .language-css,
+  .language-endpoint,
+  .language-handlebars,
+  .language-html,
+  .language-jinja,
+  .language-xml {
+    background: #2f3053 !important;
+    color: #d0e1f6;
 
-  .hljs-tag {
-    color: #9cddff;
-  }
+    .hljs-tag {
+      color: #9cddff;
+    }
 
-  .hljs-meta {
-    color: #b9d9ff;
-  }
+    .hljs-meta {
+      color: #b9d9ff;
+    }
 
-  .hljs-attr {
-    color: #6ccae4;
-  }
+    .hljs-attr {
+      color: #6ccae4;
+    }
 
-  .hljs-string {
-    color: #e0cd8e;
-    font-weight: 400;
-    font-family: 'Hack';
-  }
+    .hljs-string {
+      color: #e0cd8e;
+      font-weight: 400;
+      font-family: 'Hack';
+    }
 
-  .hljs-name {
-    color: #89a4ff;
-  }
+    .hljs-name {
+      color: #89a4ff;
+    }
 
-  &::before {
-    content: "HTML";
-    background: rgba(56, 62, 102, 0.6);
+    &::before {
+      content: "HTML";
+      background: rgba(56, 62, 102, 0.6);
+    }
   }
 }
