--- a/src/less/posts/languages/python.less
+++ b/src/less/posts/languages/python.less
@@ -1,65 +1,67 @@
-.language-python,
-.python {
-  color: #e4f8fd ;
-  background: #1c2d47 !important;
+.post-content {
+  .language-python,
+  .python {
+    color: #e4f8fd;
+    background: #1c2d47 !important;
 
-  &::before {
-    height: auto;
-    content: "Python" !important;
-    background: rgba(61, 74, 101, 0.6);
-  }
+    &::before {
+      height: auto;
+      content: "Python" !important;
+      background: rgba(61, 74, 101, 0.6);
+    }
 
-  .hljs-meta {
-    color: #d0b6b6;
-  }
+    .hljs-meta {
+      color: #d0b6b6;
+    }
 
-  .hljs-addition,
-  .hljs-meta-string,
-  .hljs-regexp,
-  .hljs-string {
-    color: #93DCB8;
-    font-weight: 100;
-    font-family: 'Hack';
-  }
+    .hljs-addition,
+    .hljs-meta-string,
+    .hljs-regexp,
+    .hljs-string {
+      color: #93DCB8;
+      font-weight: 100;
+      font-family: 'Hack';
+    }
 
-  .hljs-params {
-    color: #ecb357 !important;
-  }
+    .hljs-params {
+      color: #ecb357 !important;
+    }
 
-  .hljs-comment {
-    color: #737a8e !important;
-  }
+    .hljs-comment {
+      color: #737a8e !important;
+    }
 
-  .hljs-attribute {
-    color: #d8b061 !important;
-  }
+    .hljs-attribute {
+      color: #d8b061 !important;
+    }
 
-  .hljs-class,
-  .hljs-title {
-    color: #ffd712 !important;
-    font-weight: 700;
-    font-family: 'Hack';
-  }
+    .hljs-class,
+    .hljs-title {
+      color: #ffd712 !important;
+      font-weight: 700;
+      font-family: 'Hack';
+    }
 
-  .hljs-attr,
-  .hljs-number,
-  .hljs-selector-attr,
-  .hljs-selector-pseudo,
-  .hljs-template-variable,
-  .hljs-type,
-  .hljs-variable {
-    color: #bc82d8 !important;
-  }
+    .hljs-attr,
+    .hljs-number,
+    .hljs-selector-attr,
+    .hljs-selector-pseudo,
+    .hljs-template-variable,
+    .hljs-type,
+    .hljs-variable {
+      color: #bc82d8 !important;
+    }
 
-  .hljs-keyword {
-    color: #00b1d5 !important;
-    font-weight: 700;
-    font-family: 'Hack';
-  }
-
-  .hljs-function {
     .hljs-keyword {
       color: #00b1d5 !important;
+      font-weight: 700;
+      font-family: 'Hack';
+    }
+
+    .hljs-function {
+      .hljs-keyword {
+        color: #00b1d5 !important;
+      }
     }
   }
 }
