--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -97,7 +97,7 @@
 			img {
 				width: 100%;
 				line-height: 1;
-				box-shadow: 0 0 8px rgba(93, 97, 140, 0.42);
+				box-shadow: 0 0 3px rgb(79, 87, 169);
 			}
 		}
 	}
@@ -807,4 +807,10 @@
 			cursor: grab !important;
 		}
 	}
+
+
+}
+
+#baguetteBox-slider button {
+	display: none;
 }
