--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -3,15 +3,15 @@
   padding: 35px 20px 10px;
   display: none;
   position: relative;
-  border-bottom: 1px solid #bed0da;
-  border-top: 1px solid #bed0da;
+  border-bottom: 1px solid #e0e8ec;
+  border-top: 1px solid #e0e8ec;
   overflow: hidden;
 
   @media(max-width: 800px) {
     margin: 0 35px 30px;
   }
   @media(max-width: 600px) {
-    margin: 10px 25px 30px;
+    margin: 10px 10px 30px;
   }
 
   h5 {
