--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -1,108 +1,110 @@
 @import "nord.less";
 
-.language-shell,
-.language-output,
-.language-bash {
-  background: @nord0;
-  color: white;
-  font-weight: normal;
-
-  .hljs-title {
-    color: @nord13;
-    font-weight: normal;
-  }
-
-  .hljs-name {
-    color: @nord8;
-  }
-
-  .hljs-tag {
-    color: @nord9;
-  }
-
-  .hljs-attr {
-    color: @nord14;
-    font-style: italic;
-  }
-
-  .hljs-built_in,
-  .hljs-section,
-  .hljs-selector-tag {
-    color: @nord12;
-  }
-
-  .hljs-keyword {
-    color: @nord9;
-  }
-
-  .hljs-subst {
-    color: #e3dfff;
-  }
-
-  .hljs-addition,
-  .hljs-bullet,
-  .hljs-code,
-  .hljs-deletion,
-  .hljs-quote,
-  .hljs-regexp,
-  .hljs-selector-attr,
-  .hljs-selector-class,
-  .hljs-selector-pseudo,
-  .hljs-string,
-  .hljs-symbol,
-  .hljs-template-tag {
-    color: @nord8;
-  }
-
-  .hljs-meta,
-  .hljs-meta-string {
-    color: @nord14;
-  }
-
-  .hljs-comment {
-    color: @nord12;
-  }
-
-  .hljs-keyword,
-  .hljs-literal,
-  .hljs-name,
-  .hljs-selector-tag,
-  .hljs-strong {
-    font-weight: normal;
-  }
-
-  .hljs-literal,
-  .hljs-number {
-    color: @nord15;
-  }
-
-  .hljs-emphasis {
-    font-style: italic;
-  }
-
-  .hljs-strong {
-    font-weight: bold;
-  }
-}
-
-.hljs.output,
-.language-output {
-  &::before {
-    content: "Output" !important;
-  }
-}
-
-.hljs.shell,
-.language-shell,
-.hljs.bash,
-.language-bash  {
-
-  .hljs-built_in {
-    color: #df91dc !important;
-  }
-  &::before {
-    content: "Shell" !important;
+.post-content {
+  .language-bash,
+  .language-output,
+  .language-shell {
+    background: @nord0;
     color: white;
-    background: rgba(35, 51, 99, 0.6);
+    font-weight: normal;
+
+    .hljs-title {
+      color: @nord13;
+      font-weight: normal;
+    }
+
+    .hljs-name {
+      color: @nord8;
+    }
+
+    .hljs-tag {
+      color: @nord9;
+    }
+
+    .hljs-attr {
+      color: @nord14;
+      font-style: italic;
+    }
+
+    .hljs-built_in,
+    .hljs-section,
+    .hljs-selector-tag {
+      color: @nord12;
+    }
+
+    .hljs-keyword {
+      color: @nord9;
+    }
+
+    .hljs-subst {
+      color: #e3dfff;
+    }
+
+    .hljs-addition,
+    .hljs-bullet,
+    .hljs-code,
+    .hljs-deletion,
+    .hljs-quote,
+    .hljs-regexp,
+    .hljs-selector-attr,
+    .hljs-selector-class,
+    .hljs-selector-pseudo,
+    .hljs-string,
+    .hljs-symbol,
+    .hljs-template-tag {
+      color: @nord8;
+    }
+
+    .hljs-meta,
+    .hljs-meta-string {
+      color: @nord14;
+    }
+
+    .hljs-comment {
+      color: @nord12;
+    }
+
+    .hljs-keyword,
+    .hljs-literal,
+    .hljs-name,
+    .hljs-selector-tag,
+    .hljs-strong {
+      font-weight: normal;
+    }
+
+    .hljs-literal,
+    .hljs-number {
+      color: @nord15;
+    }
+
+    .hljs-emphasis {
+      font-style: italic;
+    }
+
+    .hljs-strong {
+      font-weight: bold;
+    }
+  }
+
+  .hljs.output,
+  .language-output {
+    &::before {
+      content: "Output" !important;
+    }
+  }
+
+  .hljs.bash,
+  .hljs.shell,
+  .language-bash,
+  .language-shell {
+    .hljs-built_in {
+      color: #df91dc !important;
+    }
+
+    &::before {
+      content: "Shell" !important;
+      color: white;
+      background: rgba(35, 51, 99, 0.6);
+    }
   }
 }
