--- a/src/less/posts/languages/sql.less
+++ b/src/less/posts/languages/sql.less
@@ -1,96 +1,99 @@
-.language-sql,
-.sql {
-  background: #262748;
-  color: #c5c8c6;
-  .hljs span::selection,
-  .hljs::selection {
-    background: #373b41;
-  }
+.post-content {
+  .language-sql,
+  .sql {
+    background: #262748;
+    color: #c5c8c6;
 
-  .string {
-    color: #5C9AF4;
-  }
+    .hljs span::selection,
+    .hljs::selection {
+      background: #373b41;
+    }
 
-  .hljs span::-moz-selection,
-  .hljs::-moz-selection {
-    background: #373b41;
-  }
-  /*foreground color*/
-  .hljs {
-    color: #c5c8c6 !important;
-  }
-  /*color: fg_yellow*/
-  .hljs-name,
-  .hljs-title {
-    color: #f0c674;
-  }
-  /*color: fg_comment*/
-  .hljs-comment,
-  .hljs-meta,
-  .hljs-keyword {
-    color: #707880;
-  }
-  /*color: fg_red*/
-  .hljs-deletion,
-  .hljs-link,
-  .hljs-literal,
-  .hljs-number,
-  .hljs-symbol {
-    color: #cebde3;
-  }
-  /*color: fg_green*/
-  .hljs-addition,
-  .hljs-doctag,
-  .hljs-regexp,
-  .hljs-selector-attr,
-  .hljs-selector-pseudo,
-  .hljs-string {
-    color: #b0def0;
-    font-weight: 400;
-    font-family: 'Hack';
-  }
-  /*color: fg_purple*/
-  .hljs-attribute,
-  .hljs-code,
-  .hljs-selector-id {
-    color: #b294bb;
-  }
-  /*color: fg_blue*/
-  .hljs-bullet,
-  .hljs-keyword,
-  .hljs-selector-tag,
-  .hljs-tag {
-    color: #79bbf3;
-    font-weight: 700;
-    font-family: 'Hack';
-  }
-  /*color: fg_aqua*/
-  .hljs-subst,
-  .hljs-template-tag,
-  .hljs-template-variable,
-  .hljs-variable {
-    color: #8abeb7;
-  }
-  /*color: fg_orange*/
-  .hljs-built_in,
-  .hljs-builtin-name,
-  .hljs-quote,
-  .hljs-section,
-  .hljs-selector-class,
-  .hljs-type {
-    color: #ddbd73;
-  }
+    .string {
+      color: #5C9AF4;
+    }
 
-  .hljs-emphasis {
-    font-style: italic;
-  }
+    .hljs span::-moz-selection,
+    .hljs::-moz-selection {
+      background: #373b41;
+    }
+    /*foreground color*/
+    .hljs {
+      color: #c5c8c6 !important;
+    }
+    /*color: fg_yellow*/
+    .hljs-name,
+    .hljs-title {
+      color: #f0c674;
+    }
+    /*color: fg_comment*/
+    .hljs-comment,
+    .hljs-keyword,
+    .hljs-meta {
+      color: #707880;
+    }
+    /*color: fg_red*/
+    .hljs-deletion,
+    .hljs-link,
+    .hljs-literal,
+    .hljs-number,
+    .hljs-symbol {
+      color: #cebde3;
+    }
+    /*color: fg_green*/
+    .hljs-addition,
+    .hljs-doctag,
+    .hljs-regexp,
+    .hljs-selector-attr,
+    .hljs-selector-pseudo,
+    .hljs-string {
+      color: #b0def0;
+      font-weight: 400;
+      font-family: 'Hack';
+    }
+    /*color: fg_purple*/
+    .hljs-attribute,
+    .hljs-code,
+    .hljs-selector-id {
+      color: #b294bb;
+    }
+    /*color: fg_blue*/
+    .hljs-bullet,
+    .hljs-keyword,
+    .hljs-selector-tag,
+    .hljs-tag {
+      color: #79bbf3;
+      font-weight: 700;
+      font-family: 'Hack';
+    }
+    /*color: fg_aqua*/
+    .hljs-subst,
+    .hljs-template-tag,
+    .hljs-template-variable,
+    .hljs-variable {
+      color: #8abeb7;
+    }
+    /*color: fg_orange*/
+    .hljs-built_in,
+    .hljs-builtin-name,
+    .hljs-quote,
+    .hljs-section,
+    .hljs-selector-class,
+    .hljs-type {
+      color: #ddbd73;
+    }
 
-  .hljs-strong {
-    font-weight: bold;
-  }
+    .hljs-emphasis {
+      font-style: italic;
+    }
 
-  &::before {
-    content: "SQL";
-    background: rgba(49, 88, 101, 0.6);
+    .hljs-strong {
+      font-weight: bold;
+    }
+
+    &::before {
+      content: "SQL";
+      background: rgba(49, 88, 101, 0.6);
+    }
   }
 }
