moved post preview logic off ajax

--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -699,6 +699,7 @@
 		text-align: center;
 		white-space: normal;
 		line-height: 1.5;
+		border-top: 1px solid #e0e1e4;
 		@media(max-width: 600px) {
 			display: block;
 			width: auto !important;
