added endpoint language type

--- a/src/less/posts/languages/config.less
+++ b/src/less/posts/languages/config.less
@@ -12,6 +12,7 @@
     background: #2E3440;
 
     &::before {
+      color: white;
       @media(max-width: 600px) {
         font-size: 1.2em !important;
       }
