--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -3,7 +3,10 @@
 .post-content {
   .language-bash,
   .language-output,
-  .language-shell {
+  .language-shell,
+  .language-endpoint,
+  .endpoint,
+  .shell {
     background: @nord0;
     color: white;
     font-weight: normal;
