--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -229,7 +229,7 @@
 	p {
 		margin: 0 0 20px;
 		font-size: 1em;
-		
+
 		@media (max-width: 600px) {
 			text-align: left;
 			line-height: 1.65 !important;
@@ -806,10 +806,17 @@
 			cursor: grab !important;
 		}
 	}
-
-
 }
 
-#baguetteBox-slider button {
-	display: none;
+.baguetteBox-button {
+	display: none !important;
+}
+
+.full-image img {
+	background: white;
+}
+
+#baguetteBox-overlay .full-image figcaption {
+	padding: 30px 20px;
+  font-family: 'TTNorms-Regular';
 }
