JSON code snipept

--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -2,6 +2,8 @@
   .json,
   .language-json {
     line-height: 1.4 !important;
+    background: #3b314f;
+    color: #a8d1df
 
     .hljs-attr {
       color: #e471a6 !important;
@@ -59,7 +61,7 @@
     .hljs-template-variable,
     .hljs-type,
     .hljs-variable {
-      color: #d19a66;
+      color: #73b97c;
     }
 
     .hljs-bullet,
@@ -85,6 +87,7 @@
 
     &::before {
       content: "JSON";
+      color: white;
     }
   }
 }
