JSON code snipept

--- a/src/less/posts/languages/json.less
+++ b/src/less/posts/languages/json.less
@@ -3,7 +3,7 @@
   .language-json {
     line-height: 1.4 !important;
     background: #3b314f;
-    color: #a8d1df
+    color: #a8d1df;
 
     .hljs-attr {
       color: #e471a6 !important;
