--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -88,6 +88,7 @@
 
 		img {
 			max-width: 100%;
+			border: 1px solid #e3edef;
 		}
 
 		@media(max-width: 600px) {
@@ -213,6 +214,10 @@
 		.author-mobile {
 			display: none !important;
 			align-items: center;
+
+			@media(max-width: 800px) {
+				margin-right: 40px;
+			}
 
 			.avi {
 				width: 45px;
