--- a/custom-series-page.hbs
+++ b/custom-series-page.hbs
@@ -21,7 +21,12 @@
 								{{#foreach tags visibility="internal"}}
 									<div class="tag-wrapper">
 										<a href="{{slug}}">
-											{{#if feature_image}}<div class="img-wrapper" style="background-image: url({{feature_image}})"></div>{{/if}}
+											{{#if feature_image}}
+											<picture>
+												<source media="(min-width: 1200px)" data-srcset="{{img_url feature_image size="m"}} 1x, {{img_url feature_image size="m"}} 2x">
+												<img alt="{{title}}" class="lazy" data-src="{{img_url feature_image}}">
+										</picture>
+											{{/if}}
 											<div class="description">
 												<h2>{{meta_title}}</h2>
 												<p>{{description}}</p>
