--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -3,7 +3,10 @@
 
     {{#if feature_image}}
     <a class="imagewrapper" href="{{url}}">
-      <img class="post-card-image" src="{{img_url feature_image}}" alt="{{{title}}}">
+      <picture>
+        <source media="(min-width: 1200px)" data-srcset="{{img_url feature_image size="m"}} 1x, {{img_url feature_image size="m"}} 2x">
+        <img alt="{{title}}" class="lazy" data-src="{{img_url feature_image}}">
+    </picture>
       </a>
     {{/if}}
 
