--- a/post.hbs
+++ b/post.hbs
@@ -14,7 +14,11 @@
 						<h4 class="excerpt">{{excerpt}}</h4>
 						{{#if feature_image}}
 							<div class="featured-media">
-								<img src="{{img_url feature_image size="l"}}" alt="{{{title}}}" data-rjs="2">
+								<picture>
+					        <source media="(min-width: 1200px)" data-srcset="{{img_url feature_image size="l"}} 1x, {{img_url feature_image size="xl"}} 2x">
+					        <source media="(min-width: 600px)" data-srcset="{{img_url feature_image size="m"}} 1x, {{img_url feature_image size="m"}} 2x">
+					        <img alt="{{title}}" class="lazy" data-src="{{img_url feature_image}}">
+					    </picture>
 							</div>
 						{{/if}}
 
