--- a/src/less/global/menu.less
+++ b/src/less/global/menu.less
@@ -47,6 +47,7 @@ header {
 
   @media(max-width: 600px) {
     margin-bottom: 0;
+    border-bottom: 1px solid #e8e8e8;
   }
 }
 
@@ -243,94 +244,6 @@ header {
 				cursor: pointer;
 				opacity: .8;
 			}
-		}
-	}
-}
-
-.videoHeader {
-	width:100%;
-	height:fit-content;
-	background-size: contain;
-	position: relative;
-	overflow: hidden;
-
-	@media(max-width: 800px) {
-		 height: 300px;
-	}
-
-	.videoObject {
-		height: 100%;
-    width: 100%;
-    object-fit: cover;
-    z-index: -100;
-    right: 0;
-    bottom: 0;
-    background-size: cover;
-    overflow: hidden;
-		min-height: 235px;
-		max-height: 300px;
-
-		@media(max-width: 800px){
-			display: none !important;
-		}
-	}
-
-
-	.headerContainer {
-		position: absolute;
-		bottom: 0;
-	  left: 0;
-	  right: 0;
-		top:0;
-		width:100%;
-		height:100%;
-
-
-
-		.branding {
-			position: absolute;
-			top: 0;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			display: block;
-			width: 300px;
-			z-index: 200;
-			margin:auto;
-			height: 64px;
-
-			@media(max-width: 800px) {
-				height: 44px;
-		    max-width: 235px;
-		    bottom: auto;
-		    top: 29%;
-		    width: 65%;
-			}
-
-			&:hover {
-				text-decoration: none;
-			}
-
-			img {
-				width: 100%;
-			}
-		}
-	}
-
-	.navbar-header {
-		text-align: center;
-		font-size: 20px;
-		padding: 14px;
-
-		li {
-			height: 56px;
-			line-height: 56px;
-			font-size: 2em;
-			cursor: pointer;
-		}
-
-		.nav-toggle-button:hover {
-			cursor: pointer;
 		}
 	}
 }
