--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -6,8 +6,8 @@
 .postlist {
   @media(max-width: 800px) {
     padding: 0;
-    margin: 0 6%;
-    width: 88%;
+    margin: 0 auto;
+    width: 92%;
   }
   @media(max-width: 600px) {
     margin: 0 auto;
