--- a/src/less/pages/cover.less
+++ b/src/less/pages/cover.less
@@ -11,10 +11,16 @@
 	width: -moz-fill-available;
 	box-shadow: 0 0 5px rgba(65, 67, 144, 0.15);
 
+	@media(max-width: 800px) {
+		margin: 0 auto 20px;
+		width: 92%;
+		padding: 40px 0;
+	}
+
 	@media(max-width: 600px) {
 		margin-left: calc(~"-50vw + 50%") !important;
 		margin-right: calc(~"-50vw + 50%") !important;
-		margin-top: -19px;
+		margin-top: 0;
 		padding: 30px;
 	}
 
