--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -11,6 +11,7 @@ var lazyLoadInstance = new LazyLoad({
 </script>
 {{#is "post"}}
   <script src="{{asset "/dist/posts.js"}}"></script>
+  hljs.initHighlightingOnLoad();
 {{/is}}
 {{^is "post,home"}}
   <script async src="{{asset "/dist/pages.js"}}"></script>
